# miniApp

./: README.md  gui.html  gui.py  requirement.txt
genNumber/: CMakeLists.txt  main.cpp
